[gd_scene load_steps=27 format=3 uid="uid://c7y17t1ic1j2v"]

[ext_resource type="Texture2D" uid="uid://m0wdtg1hvlgv" path="res://assets/Mushroom/Idle (32x32).png" id="1_b0s10"]
[ext_resource type="Script" uid="uid://b6y3hxbopxubw" path="res://scenes/mushroom.gd" id="1_f4pa7"]
[ext_resource type="Texture2D" uid="uid://buj8yke5hyw51" path="res://assets/Mushroom/Hit.png" id="2_6c3h1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0bdi0"]
atlas = ExtResource("1_b0s10")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxrkd"]
atlas = ExtResource("1_b0s10")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3h1"]
atlas = ExtResource("1_b0s10")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4pa7"]
atlas = ExtResource("1_b0s10")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jekqn"]
atlas = ExtResource("1_b0s10")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rddh"]
atlas = ExtResource("1_b0s10")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v15d"]
atlas = ExtResource("1_b0s10")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rtbm"]
atlas = ExtResource("1_b0s10")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utliv"]
atlas = ExtResource("1_b0s10")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfc76"]
atlas = ExtResource("1_b0s10")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhg23"]
atlas = ExtResource("1_b0s10")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmpg3"]
atlas = ExtResource("1_b0s10")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15w21"]
atlas = ExtResource("1_b0s10")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne4m3"]
atlas = ExtResource("1_b0s10")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shet8"]
atlas = ExtResource("2_6c3h1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w611"]
atlas = ExtResource("2_6c3h1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vf25"]
atlas = ExtResource("2_6c3h1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_focxt"]
atlas = ExtResource("2_6c3h1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjmyf"]
atlas = ExtResource("2_6c3h1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_shet8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bdi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxrkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4pa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jekqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rddh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v15d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rtbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utliv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfc76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhg23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmpg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15w21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne4m3")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shet8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w611")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vf25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_focxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjmyf")
}],
"loop": false,
"name": &"hurting",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0w611"]
size = Vector2(95, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0bdi0"]
size = Vector2(85, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxrkd"]
size = Vector2(102, 68)

[node name="Mushroom" type="RigidBody2D"]
script = ExtResource("1_f4pa7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -60)
scale = Vector2(3.75, 3.75)
sprite_frames = SubResource("SpriteFrames_shet8")
animation = &"hurting"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -39.5)
shape = SubResource("RectangleShape2D_0w611")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(1, -60)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.5, -12)
shape = SubResource("RectangleShape2D_0bdi0")
debug_color = Color(0.27451, 0.611765, 0, 0.419608)

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(1, -60)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 26)
shape = SubResource("RectangleShape2D_qxrkd")
debug_color = Color(0.989616, 0, 0.288335, 0.42)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
